ROU-3776: [Datepickers Issues] (#531)
* Updated AddTodayBtn validation.

* Fix cropped input time values.

* Remove old comment.

* Updated old comment.

* Enable the ability to have equal dates as well.

* Added ShowWeekNumbers to OnParamsChange as well.

* Improves based on feedback.

* Update validation.

--- a/src/scripts/Providers/SharedProviderResources/Flatpickr/_flatpickr.scss
+++ b/src/scripts/Providers/SharedProviderResources/Flatpickr/_flatpickr.scss
@@ -356,7 +356,7 @@ span.flatpickr-weekday {
 	.numInputWrapper {
 		flex: initial;
 		height: 30px;
-		padding: 0 var(--space-base);
+		padding: 0 var(--space-base) 0 var(--space-s);
 		width: 48px;
 
 		&:hover,
